# musi216

./: README.md
calendar_generator/: composition_template.md.jinja  composition_template.txt  data.csv  post_template.md.jinja  pyproject.toml  readme.md  run.py  run_jinja.py  syllabus_template.md.jinja  syllabus_template.txt  template.txt
docs/: .gitignore  CNAME  Compositions.md  Gemfile  _config.yml  all-classes.html  assignments-vgm-topics.md  blog.html  classes.html  final.md  index.markdown  lessons-debussy.md  lessons-intro.md  lessons-leitmotif.md  lessons-topics.md  lessons.md  syllabus.md
docs/_includes/: footer.html  head.html  header-posts.html  header.html
docs/_layouts/: default.html  home.html  page.html  post.html
docs/_posts/: 2023-01-09-welcome-to-jekyll.markdown  2023-01-10-test copy 3.md  2023-01-10-test copy.md  2023-01-10-test.md  2023-01-24-chord-symbols.md  2023-01-26-notation-software-workshop.md  2023-01-26-swing-rhythms.md  2023-01-31-blues-harmony.md  2023-01-31-swing-rhythms.md  2023-02-02-blues-harmony.md  2023-02-02-blues-melodies-and-the-blues-scale.md  2023-02-07-improvising-(bring-instruments-to-class).md  2023-02-07-improvising.md  2023-02-09-chord-symbols:-extensions-and-alterations.md  2023-02-14-notation-software-workshop.md  2023-02-16-jazz-voicings.md  2023-02-21-tonicization.md  2023-02-23-ii–v–i.md  2023-02-28-embellishing-chords.md  2023-03-02-substitutions.md  2023-03-07-chord–scale-theory-.md  2023-03-09-bebop-composition-performances.md  2023-03-09-composition-workshop-day.md  2023-03-14-.md  2023-03-14-<delete>.md  (+114 more)
(+13 files in other folders)
