[tool.poetry]
name = "calendar-generator"
version = "0.1.0"
description = ""
authors = ["Evan <e.williams@digital-science.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
