[tool.poetry]
name = "calendar-generator"
version = "0.1.0"
description = ""
authors = ["Evan <e.williams@digital-science.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
pandas = ">1,<2"
jinja2 = "^3.1.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
